[tool.poetry]
name = "ai-agent-test-09"
version = "1.0.0"
description = ""
authors = ["Jaewoo Kim <beyond-zero@naver.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langchain-core = "^0.3.0"
langchain-openai = "^0.2.0"
langgraph = "^0.2.22"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
